--- a/styles.css
+++ b/styles.css
@@ -1,61 +1,55 @@
-*, *::after, *::before {
-  font-family: Arial, Helvetica, sans-serif;
-  box-sizing: border-box;
-}
-
-body{
+*, *::before, *::after {
+    box-sizing: border-box;
+    font-family: Arial;
+  }
+  
+  body {
+    background-color: #333;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: hsl(0, 0%, 39%);
     height: 100vh;
     margin: 0;
     font-size: 7.5vmin;
-    --grid-size: 4;
-    --cell-size: 20vmin;
-    --cell-gap: 2vmin;
-}
-
-#game-board{
+  }
+  
+  #game-board {
     display: grid;
     grid-template-columns: repeat(var(--grid-size), var(--cell-size));
     grid-template-rows: repeat(var(--grid-size), var(--cell-size));
-    background-color: hsl(0, 0%, 75%);
-    border-radius: 1vmin;
+    background-color: #CCC;
     gap: var(--cell-gap);
     border-radius: 1vmin;
     padding: var(--cell-gap);
     position: relative;
-}
-
- .cell{  
-    background-color: rgb(156, 156, 156);
+  }
+  
+  .cell {
+    background-color: #AAA;
     border-radius: 1vmin;
- }
-
- .tile{
-    --x: 0;
-    --y: 0;
-    --background-lightness: 70%;
-    --text-lightness: 10%;
+  }
+  
+  .tile {
     position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     width: var(--cell-size);
     height: var(--cell-size);
-    background-color: hsl(200, 50%, var(--background-lightness));
-    color: hsl(200, 25%, var(--text-lightness));
+    background-color: red;
     border-radius: 1vmin;
     top: calc(var(--y) * (var(--cell-size) + var(--cell-gap)) + var(--cell-gap));
     left: calc(var(--x) * (var(--cell-size) + var(--cell-gap)) + var(--cell-gap));
     font-weight: bold;
+    background-color: hsl(600, 50%, var(--background-lightness));
+    color: hsl(600, 25%, var(--text-lightness));
     animation: show 200ms ease-in-out;
     transition: 100ms ease-in-out;
- }
- @keyframes show {
+  }
+  
+  @keyframes show {
     0% {
-        transform: scale(0);
-        opacity: 0.5;
+      opacity: .5;
+      transform: scale(0);
     }
- }
+  }
