--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,46 @@
     transition: all 200ms ease-in-out;
 
   }
-  
+
+  .home-button {
+  display: flex;
+  position: absolute;
+  gap: 10px;
+  top: 1em;
+  left: 7.5em;
+  padding: 18px 20px;
+  border-radius: 0.5em;
+  background: linear-gradient(to right, #4f46e5, #6760ec);
+  color: #ffffff;
+  font-size: 2rem;
+  font-weight: bold;
+  border: none;
+  transition: all 300ms ease-in-out;
+  cursor: pointer;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.home-button-bg {
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(to right, #6760ec , #4f46e5); /* reversed */
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: 0;
+}
+
+.home-button:hover .home-button-bg {
+  opacity: 1;
+}
+
+.home-button-content {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+  z-index: 1;
+}
   .controls{
     display:flex;
     flex-direction: column;
